--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+  <body>
+<form method="get" action="file.doc">
+   <button type="submit">Download!</button>
+</form>
+
+  </body>
+</html>
