--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-<form method="get" action="file.doc">
+<form method="get" action="FeuerTropfen.zip">
    <button type="submit">Download!</button>
 </form>
 
